--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -15,7 +15,7 @@ jobs:
         id: variables
         run: |
           echo "::set-output name=OLD_VERSION::$(curl -sX GET "https://api.github.com/repos/hydazz/docker-plex/releases/latest" | jq -r .tag_name)"
-          echo "::set-output name=VERSION::$(curl -sX GET 'https://plex.tv/api/downloads/5.json' | jq -r '.computer.Linux.version')
+          echo "::set-output name=VERSION::$(curl -sX GET "https://plex.tv/api/downloads/5.json" | jq -r .computer.Linux.version)"
 
       - name: Create Tag
         if: steps.variables.outputs.OLD_VERSION != steps.variables.outputs.VERSION
