--- a/.github/workflows/auto-builder.yml
+++ b/.github/workflows/auto-builder.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build The Docker Image
         env:
-          PLEX_VERSION: ${{ steps.variables.outputs.VERSION }}
+          VERSION: ${{ steps.variables.outputs.VERSION }}
         run: |
           docker build --no-cache --pull . --file Dockerfile --build-arg VERSION="${VERSION}" --build-arg BUILD_DATE="$(date +%Y-%m-%d)" --tag ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:cibuild
 
@@ -56,7 +56,7 @@ jobs:
 
       - name: Update README
         env:
-          PLEX_RELEASE: ${{ steps.variables.outputs.VERSION }}
+          PLEX_VERSION: ${{ steps.variables.outputs.VERSION }}
         run: |
           chmod +x update_version_info.sh && ./update_version_info.sh
 
