--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -22,7 +22,7 @@ TEST_SEARCH='\[services.d\] done.'
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
 RELEASE_SCHEDULE='5 0 * * 1-6'
-RELEASE_VERSION='$(curl -sX GET "https://plex.tv/api/downloads/5.json" | jq -r .computer.Linux.version)'
+RELEASE_VERSION_COMMAND='$(curl -sX GET "https://plex.tv/api/downloads/5.json" | jq -r .computer.Linux.version)'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~
 # README.md
