--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -4,10 +4,11 @@
 # auto-builder.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
+TAGS='edge'
+LATEST='edge'
 BUILD_SCHEDULE='5 0 * * 0'
 BRANCH='main'
 DOCKERHUB_IMAGE='plex'
-DOCKERIMAGE_TAG='latest'
 APP_VERSION_LINK=''
 PLATFORMS='linux/amd64'
 APP_BRANCH=''
