--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -16,7 +16,7 @@ BASE_OS='ubuntu'
 ON_RELEASE='true'
 VERSIONING='true'
 BUILD_ARGS=''
-TEST_SEARCH='\[services.d\] done.'
+TEST_SEARCH=''
 
 # ~~~~~~~~~~~~~~~~~~~~~~~
 # auto-release.yml
