--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -4,8 +4,8 @@
 # auto-builder.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
-TAGS='edge'
-LATEST='edge'
+TAGS='groovy'
+LATEST='groovy'
 BUILD_SCHEDULE='10 0 * * 0'
 BRANCH='main'
 DOCKERHUB_IMAGE='plex'
