--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -23,4 +23,5 @@ TEST_SEARCH=''
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
 RELEASE_SCHEDULE='10 0 * * 1-6'
+BEAUTY_NAME='Plex'
 RELEASE_VERSION_COMMAND='$(curl -sX GET "https://plex.tv/api/downloads/5.json" | jq -r .computer.Linux.version)'
