beautify dockerfile, change to latest tag

--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -4,8 +4,9 @@
 # auto-builder.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
-TAGS='groovy'
-LATEST='groovy'
+TAGS=''
+LATEST=''
+
 BUILD_SCHEDULE=''
 BRANCH='main'
 DOCKERHUB_IMAGE='plex'
