change -sX GET t- -sL, warp jq

--- a/.github/workflows/auto-builder.yml
+++ b/.github/workflows/auto-builder.yml
@@ -43,8 +43,8 @@ jobs:
             --platform=linux/amd64 \
             --output "type=image,push=true" \
             --build-arg BUILD_DATE="$(date +%Y-%m-%d)" \
-            --build-arg VERSION=$(curl -sX GET "https://api.github.com/repos/hydazz/docker-plex/releases/latest" | jq -r .tag_name) \
-            --tag vcxpz/plex:$(curl -sX GET "https://api.github.com/repos/hydazz/docker-plex/releases/latest" | jq -r .tag_name) \
+            --build-arg VERSION=$(curl -sL "https://api.github.com/repos/hydazz/docker-plex/releases/latest" | jq -r '.tag_name') \
+            --tag vcxpz/plex:$(curl -sL "https://api.github.com/repos/hydazz/docker-plex/releases/latest" | jq -r '.tag_name') \
             --tag vcxpz/plex:latest \
             --file Dockerfile .
 
