--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -26,4 +26,5 @@ IMAGES=''
 
 RELEASE_SCHEDULE='10 0 * * 1-6'
 BEAUTY_NAME='Plex'
-RELEASE_VERSION_COMMAND='$(curl -sX GET "https://plex.tv/api/downloads/5.json" | jq -r .computer.Linux.version)'
+# apostrophe needs be replaced by '\x27'
+RELEASE_VERSION_COMMAND='$(curl -sL "https://plex.tv/api/downloads/5.json" | jq -r \x27.computer.Linux.version\x27)'
