--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -14,8 +14,8 @@ APP_VERSION_LINK=''
 PLATFORMS='linux/amd64'
 APP_BRANCH=''
 BASE_OS='ubuntu'
-ON_RELEASE='true'
-VERSIONING='true'
+ON_RELEASE='false'
+VERSIONING='false'
 BUILD_ARGS=''
 TEST_SEARCH=''
 IMAGES=''
@@ -24,7 +24,7 @@ IMAGES=''
 # auto-release.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
-RELEASE_SCHEDULE='10 0 * * 1-6'
-BEAUTY_NAME='Plex'
+RELEASE_SCHEDULE=''
+BEAUTY_NAME=''
 # apostrophe needs be replaced by '\x27'
-RELEASE_VERSION_COMMAND='$(curl -sL "https://plex.tv/api/downloads/5.json" | jq -r \x27.computer.Linux.version\x27)'
+RELEASE_VERSION_COMMAND=''
