--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -26,5 +26,5 @@ IMAGES=''
 
 RELEASE_SCHEDULE=''
 BEAUTY_NAME=''
-# apostrophe needs be replaced by '\x27'
+# apostrophe needs be replaced with '\x27'
 RELEASE_VERSION_COMMAND=''
